force-app/main/default/objects/Stock_Report_Import__c/Stock_Report_Import__c.object-meta.xml
<CustomObject>
    <label>Stock Report Import</label>
    <nameField>
        <label>Stock Report Import Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock Report Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>