force-app/main/default/objects/Stock_Report_Import__c/fields/Abverkauf_Sold__c.field-meta.xml
<CustomField>
    <fullName>Abverkauf_Sold__c</fullName>
    <label>Abverkauf</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>