force-app/main/default/objects/Stock_Report_Import__c/fields/Anzahl_offener_Auftr_ge_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_offener_Auftr_ge_Purchase_Order__c</fullName>
    <label>Anzahl offener Aufträge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>