force-app/main/default/objects/Stock_Report_Import__c/fields/ART_NR_External_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>ART_NR_External_Product_Code__c</fullName>
    <label>ART.NR.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>