force-app/main/default/objects/Stock_Report_Import__c/fields/ArticleID_External_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>ArticleID_External_Product_Code__c</fullName>
    <label>ArticleID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>