force-app/main/default/objects/Stock_Report_Import__c/fields/Artikel_Nr_External_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Artikel_Nr_External_Product_Code__c</fullName>
    <label>Artikel-Nr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>