force-app/main/default/objects/Stock_Report_Import__c/fields/Artikel_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Artikel_Product_Name__c</fullName>
    <label>Artikel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>