force-app/main/default/objects/Stock_Report_Import__c/fields/Artikelbezeichnung_0_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Artikelbezeichnung_0_Product_Name__c</fullName>
    <label>Artikelbezeichnung 0</label>
    <length>255</length>
    <type>Text</type>
</CustomField>