force-app/main/default/objects/Stock_Report_Import__c/fields/Artikelkurztext_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Artikelkurztext_Product_Name__c</fullName>
    <label>Artikelkurztext</label>
    <length>255</length>
    <type>Text</type>
</CustomField>