force-app/main/default/objects/Stock_Report_Import__c/fields/Artikelnummer_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Artikelnummer_Product_Code__c</fullName>
    <label>Artikelnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>