force-app/main/default/objects/Stock_Report_Import__c/fields/ASIN_External_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>ASIN_External_Product_Code__c</fullName>
    <label>ASIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>