force-app/main/default/objects/Stock_Report_Import__c/fields/Auftragsbestand_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Auftragsbestand_Sales_Order__c</fullName>
    <label>Auftragsbestand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>