force-app/main/default/objects/Stock_Report_Import__c/fields/Bestand_Stock__c.field-meta.xml
<CustomField>
    <fullName>Bestand_Stock__c</fullName>
    <label>Bestand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>