force-app/main/default/objects/Stock_Report_Import__c/fields/BESTELLT_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>BESTELLT_Purchase_Order__c</fullName>
    <label>BESTELLT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>