force-app/main/default/objects/Stock_Report_Import__c/fields/Bezeichnung_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Bezeichnung_Product_Name__c</fullName>
    <label>Bezeichnung</label>
    <length>255</length>
    <type>Text</type>
</CustomField>