force-app/main/default/objects/Stock_Report_Import__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>Use this field to edit record date for reporting.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>