force-app/main/default/objects/Stock_Report_Import__c/fields/Datenstand_Date__c.field-meta.xml
<CustomField>
    <fullName>Datenstand_Date__c</fullName>
    <label>Datenstand</label>
    <type>Date</type>
</CustomField>