force-app/main/default/objects/Stock_Report_Import__c/fields/Distributor_Artikelnummer_External_Produ__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Artikelnummer_External_Produ__c</fullName>
    <label>Distributor-Artikelnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>