force-app/main/default/objects/Stock_Report_Import__c/fields/distributor_Id__c.field-meta.xml
<CustomField>
    <fullName>distributor_Id__c</fullName>
    <formula>VALUE(Account__r.migrationtExternalId__c)</formula>
    <label>Distributor ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>