force-app/main/default/objects/Stock_Report_Import__c/fields/HERST_NR_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>HERST_NR_Product_Code__c</fullName>
    <label>HERST.NR.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>