force-app/main/default/objects/Stock_Report_Import__c/fields/Hersteller_Artikelnr_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Hersteller_Artikelnr_Product_Code__c</fullName>
    <label>Hersteller Artikelnr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>