force-app/main/default/objects/Stock_Report_Import__c/fields/Hersteller_Nr_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Hersteller_Nr_Product_Code__c</fullName>
    <label>Hersteller-Nr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>