force-app/main/default/objects/Stock_Report_Import__c/fields/Herstellerartikelnummer_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Herstellerartikelnummer_Product_Code__c</fullName>
    <label>Herstellerartikelnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>