force-app/main/default/objects/Stock_Report_Import__c/fields/Herstellernr_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Herstellernr_Product_Code__c</fullName>
    <label>Herstellernr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>