force-app/main/default/objects/Stock_Report_Import__c/fields/Import_File__c.field-meta.xml
<CustomField>
    <fullName>Import_File__c</fullName>
    <formula>CASE(distributor_Id__c,   null, &apos;SRI-Distributor-&apos;&amp;TEXT(CreatedDate) ,  &apos;SRI-&apos;&amp;Account__r.Name&amp;&apos;-&apos;&amp;TEXT(CreatedDate))</formula>
    <label>Import File</label>
    <type>Text</type>
</CustomField>