force-app/main/default/objects/Stock_Report_Import__c/fields/ItemCode_External_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>ItemCode_External_Product_Code__c</fullName>
    <label>ItemCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>