force-app/main/default/objects/Stock_Report_Import__c/fields/KD_BACKLOG_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>KD_BACKLOG_Sales_Order__c</fullName>
    <label>KD-BACKLOG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>