force-app/main/default/objects/Stock_Report_Import__c/fields/Kundenbacklog_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Kundenbacklog_Sales_Order__c</fullName>
    <label>Kundenbacklog</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>