force-app/main/default/objects/Stock_Report_Import__c/fields/LAGER_Stock__c.field-meta.xml
<CustomField>
    <fullName>LAGER_Stock__c</fullName>
    <label>LAGER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>