force-app/main/default/objects/Stock_Report_Import__c/fields/Lagerbestand_Stock__c.field-meta.xml
<CustomField>
    <fullName>Lagerbestand_Stock__c</fullName>
    <label>Lagerbestand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>