force-app/main/default/objects/Stock_Report_Import__c/fields/Lagermenge_Stock__c.field-meta.xml
<CustomField>
    <fullName>Lagermenge_Stock__c</fullName>
    <label>Lagermenge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>