force-app/main/default/objects/Stock_Report_Import__c/fields/Material_External_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_External_Product_Code__c</fullName>
    <label>Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>