force-app/main/default/objects/Stock_Report_Import__c/fields/Materialbez_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Materialbez_Product_Name__c</fullName>
    <label>Materialbez.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>