force-app/main/default/objects/Stock_Report_Import__c/fields/month_of_year_formula__c.field-meta.xml
<CustomField>
    <fullName>month_of_year_formula__c</fullName>
    <formula>MONTH(Stock_Report_Date_Formula__c)</formula>
    <label>month of year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>