force-app/main/default/objects/Stock_Report_Import__c/fields/Name_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Name_Product_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>