force-app/main/default/objects/Stock_Report_Import__c/fields/Nummer_External_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Nummer_External_Product_Code__c</fullName>
    <label>Nummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>