force-app/main/default/objects/Stock_Report_Import__c/fields/Product_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Formula__c</fullName>
    <formula>/*
CASE( Account__r.Name,  
					&apos;ALSO Deutschland GmbH&apos;, Hersteller_Artikelnr_Product_Code__c, 
					&apos;Ingram Micro Distribution GmbH&apos;, Hersteller_Nr_Product_Code__c, 
					&apos;Caseking GmbH&apos;, Hersteller_Nr_Product_Code__c,
					&apos;Computation Systemhaus GmbH&apos;,  PartNumber_Product_Code__c ,
					&apos;Delo Computer GmbH&apos;, Artikelnummer_Product_Code__c,
					&apos;Notebooksbilliger.de AG&apos;,  Herstellernr_Product_Code__c, 
					&apos;Tarox AG&apos;,  HERST_NR_Product_Code__c, 
					&apos;Wensauer Com-Systeme GmbH&apos;,  Herstellerartikelnummer_Product_Code__c, 
					null)
*/
IF(ISPICKVAL(VS_Region__c, &apos;VSE&apos;),
Hersteller_Artikelnr_Product_Code__c
,null)</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>