force-app/main/default/objects/Stock_Report_Import__c/fields/Product_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Formula__c</fullName>
    <formula>/*
CASE( Account__r.Name, 
					&apos;ALSO Deutschland GmbH&apos;, Materialbez_Product_Name__c, 
					&apos;Ingram Micro Distribution GmbH&apos;, Artikelbezeichnung_0_Product_Name__c, 
					&apos;Amazon EU SARL&apos;, Produkttitel_Product_Name__c,
					&apos;Caseking GmbH&apos;,  Bezeichnung_Product_Name__c,
					&apos;Delo Computer GmbH&apos;,  Artikelkurztext_Product_Name__c,
					&apos;Notebooksbilliger.de AG&apos;,  Artikel_Product_Name__c,  
					&apos;Tarox AG&apos;, Artikel_Product_Name__c,
					&apos;visunext International GmbH &amp; Co. KG&apos;,  Name, 
					
					null
					)
*/
IF(ISPICKVAL(VS_Region__c, &apos;VSE&apos;),
Materialbez_Product_Name__c
,null)</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>