force-app/main/default/objects/Stock_Report_Import__c/fields/Produkttitel_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Produkttitel_Product_Name__c</fullName>
    <label>Produkttitel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>