force-app/main/default/objects/Stock_Report_Import__c/fields/Purchase_Order_Formula__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Formula__c</fullName>
    <formula>/*
CASE( Account__r.Name ,   
					&apos;ALSO Deutschland GmbH&apos;, Bestellbestand_Purchase_Order__c, 
					&apos;Ingram Micro Distribution GmbH&apos;, BB_Purchase_Order__c,
					&apos;Amazon EU SARL&apos;, Anzahl_offener_Auftr_ge_Purchase_Order__c,
					&apos;Delo Computer GmbH&apos;, Bestellbestand_Purchase_Order__c,
					&apos;Notebooksbilliger.de AG&apos;, Store_Purchase_Order__c, 
					&apos;Tarox AG&apos;, BESTELLT_Purchase_Order__c,
					&apos;visunext International GmbH &amp; Co. KG&apos;,  Zulauf_Purchase_Order__c, 
					null)
*/
IF(ISPICKVAL(VS_Region__c, &apos;VSE&apos;),
Bestellbestand_Purchase_Order__c
,null)</formula>
    <label>Purchase Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>