force-app/main/default/objects/Stock_Report_Import__c/fields/Qty_W01_Sold__c.field-meta.xml
<CustomField>
    <fullName>Qty_W01_Sold__c</fullName>
    <label>Qty_W01</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>