force-app/main/default/objects/Stock_Report_Import__c/fields/Ready_to_Sync_to_TCRM__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Sync_to_TCRM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Sync to TCRM</label>
    <type>Checkbox</type>
</CustomField>