force-app/main/default/objects/Stock_Report_Import__c/fields/Reserviert_Sold__c.field-meta.xml
<CustomField>
    <fullName>Reserviert_Sold__c</fullName>
    <label>Reserviert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>