force-app/main/default/objects/Stock_Report_Import__c/fields/Sales_Order_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Formula__c</fullName>
    <formula>/*
CASE(Account__r.Name, 
					&apos;ALSO Deutschland GmbH&apos;, Auftragsbestand_Sales_Order__c, 
					&apos;Ingram Micro Distribution GmbH&apos;, AB_Sales_Order__c, 
					&apos;Delo Computer GmbH&apos;,Kundenbacklog_Sales_Order__c, 
					&apos;Tarox AG&apos;,  KD_BACKLOG_Sales_Order__c, 
					null)
*/
IF(ISPICKVAL(VS_Region__c, &apos;VSE&apos;),
Auftragsbestand_Sales_Order__c
,null)</formula>
    <label>Sales Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>