force-app/main/default/objects/Stock_Report_Import__c/fields/SellOut_Sold__c.field-meta.xml
<CustomField>
    <fullName>SellOut_Sold__c</fullName>
    <label>SellOut</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>