force-app/main/default/objects/Stock_Report_Import__c/fields/Sold_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sold_Formula__c</fullName>
    <formula>/*
CASE( Account__r.Name,  
					&apos;ALSO Deutschland GmbH&apos;, Qty_W01_Sold__c, 
					&apos;Ingram Micro Distribution GmbH&apos;, VK_DE_Vorwoche_Sold__c, 
					&apos;Caseking GmbH&apos;, Verkaufsmenge_Woche_1_Sold__c,  
					&apos;Computation Systemhaus GmbH&apos;, SellOut_Sold__c,
					&apos;Delo Computer GmbH&apos;,  VK_KW24_Sold__c, 
					&apos;Notebooksbilliger.de AG&apos;,  Reserviert_Sold__c, 
				&apos;visunext International GmbH &amp; Co. KG&apos;,  Abverkauf_Sold__c, 
					null
				)
*/
IF(ISPICKVAL(VS_Region__c, &apos;VSE&apos;),
Qty_W01_Sold__c
,null)</formula>
    <label>Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>