force-app/main/default/objects/Stock_Report_Import__c/fields/Stock_Report_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Stock_Report_Date_Formula__c</fullName>
    <formula>/*Old Version
CASE(  Account__r.Name, 
					&apos;ALSO Deutschland GmbH&apos;, Date__c, 
					&apos;Ingram Micro Distribution GmbH&apos;, Datenstand_Date__c, 	
					Date__c)
*/
IF(ISPICKVAL(VS_Region__c, &apos;VSE&apos;),
Date__c
		,null)</formula>
    <inlineHelpText>Locked. Please use the &quot;Date&quot; field to edit the record date.</inlineHelpText>
    <label>Stock Report Date</label>
    <type>Date</type>
</CustomField>