force-app/main/default/objects/Stock_Report_Import__c/fields/Stock_Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock_Stock__c</fullName>
    <label>Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>