force-app/main/default/objects/Stock_Report_Import__c/fields/Synced_to_TCRM_Date__c.field-meta.xml
<CustomField>
    <fullName>Synced_to_TCRM_Date__c</fullName>
    <label>Synced to TCRM Date</label>
    <type>Date</type>
</CustomField>