force-app/main/default/objects/Stock_Report_Import__c/fields/Verkaufsmenge_Woche_1_Sold__c.field-meta.xml
<CustomField>
    <fullName>Verkaufsmenge_Woche_1_Sold__c</fullName>
    <label>Verkaufsmenge - Woche (-1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>