force-app/main/default/objects/Stock_Report_Import__c/fields/VK_DE_Vorwoche_Sold__c.field-meta.xml
<CustomField>
    <fullName>VK_DE_Vorwoche_Sold__c</fullName>
    <label>VK_DE Vorwoche</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>