force-app/main/default/objects/Stock_Report_Import__c/fields/VK_KW24_Sold__c.field-meta.xml
<CustomField>
    <fullName>VK_KW24_Sold__c</fullName>
    <label>VK KW24</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>