force-app/main/default/objects/Stock_Report_Import__c/fields/Vorr_tige_marktf_hige_Produkte_Stock__c.field-meta.xml
<CustomField>
    <fullName>Vorr_tige_marktf_hige_Produkte_Stock__c</fullName>
    <label>Vorrätige marktfähige Produkte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>