force-app/main/default/objects/Stock_Report_Import__c/fields/VS_SubRegion__c.field-meta.xml
<CustomField>
    <fullName>VS_SubRegion__c</fullName>
    <label>VS SubRegion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VS_SubRegion</valueSetName>
    </valueSet>
</CustomField>