force-app/main/default/objects/Stock_Report_Import__c/fields/year_formula__c.field-meta.xml
<CustomField>
    <fullName>year_formula__c</fullName>
    <formula>YEAR(Stock_Report_Date_Formula__c)</formula>
    <label>year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>