force-app/main/default/objects/Stock_Report_Import__c/validationRules/SRI01_Record_Synced_to_TCRM_cant_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>SRI01_Record_Synced_to_TCRM_cant_edit</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Synced_to_TCRM__c,NOT(ISCHANGED(Synced_to_TCRM__c)))</errorConditionFormula>
    <errorMessage>SRI01-Record Synced to TCRM can&apos;t edit</errorMessage>
</ValidationRule>