force-app/main/default/objects/Stock_Report_Import__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>distributor_Id__c</columns>
    <columns>External_Product_Code_Formula__c</columns>
    <columns>Product_Code_Formula__c</columns>
    <columns>Product_Name_Formula__c</columns>
    <columns>Purchase_Order_Formula__c</columns>
    <columns>Sales_Order_Formula__c</columns>
    <columns>Sold_Formula__c</columns>
    <columns>Stock_Formula__c</columns>
    <columns>Stock_Report_Date_Formula__c</columns>
    <columns>Synced_to_TCRM_Date__c</columns>
    <columns>Synced_to_TCRM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>