force-app/main/default/objects/Stock_Report_Import__c/listViews/Also.listView-meta.xml
<ListView>
    <fullName>Also</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Import_File__c</columns>
    <columns>Product_Code_Formula__c</columns>
    <columns>Purchase_Order_Formula__c</columns>
    <columns>Sales_Order_Formula__c</columns>
    <columns>Sold_Formula__c</columns>
    <columns>Stock_Formula__c</columns>
    <columns>Stock_Report_Date_Formula__c</columns>
    <columns>Synced_to_TCRM__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>External_Product_Code_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>ALSO Deutschland GmbH</value>
    </filters>
    <filters>
        <field>Synced_to_TCRM__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Also_Synced to TCRM</label>
    <sharedTo>
        <group>VSE_Germany_CMS_Admin</group>
    </sharedTo>
</ListView>