force-app/main/default/objects/Stock_Report_Import__c/listViews/Delo_Synced_to_TCRM.listView-meta.xml
<ListView>
    <fullName>Delo_Synced_to_TCRM</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>distributor_Id__c</columns>
    <columns>Stock_Report_Date_Formula__c</columns>
    <columns>Import_File__c</columns>
    <columns>Product_Code_Formula__c</columns>
    <columns>External_Product_Code_Formula__c</columns>
    <columns>Sales_Order_Formula__c</columns>
    <columns>Purchase_Order_Formula__c</columns>
    <columns>Sold_Formula__c</columns>
    <columns>Stock_Formula__c</columns>
    <columns>Synced_to_TCRM__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Delo Computer GmbH</value>
    </filters>
    <filters>
        <field>Synced_to_TCRM__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Delo_Synced to TCRM</label>
</ListView>